[package]
name = "signature"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4.3"
strum = { version = "0.23.0", features = ["derive"] }
url = "2.2.2"
anyhow = "1.0"
oci-distribution = { git = "https://github.com/krustlet/oci-distribution", rev = "1ba0d94a900a97aa1bcac032a67ea23766bcfdef" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
base64 = "0.13.0"
sequoia-openpgp = { version = "1.7.0", default-features = false, features = ["compression", "crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }
async-trait = "0.1.56"
tokio = { version = "1.0", features = [ "rt", "macros", "rt-multi-thread" ] }
tonic = "0.5"
prost = "0.8"
strum_macros = "0.24.2"
sigstore_rs = { git = "https://github.com/sigstore/sigstore-rs", rev = "6dd3281c25270f0d82550368abfb399ed3da7b41", package = "sigstore" }

[build-dependencies]
tonic-build = "0.5"
shadow-rs = "0.17.1"

[dev-dependencies]
rstest = "0.15.0"
serial_test = "0.9.0"
