[package]
name = "attestation-agent"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
attestation_agent = { path = "../lib", default-features = false }
base64.workspace = true
cfg-if.workspace = true
clap = { workspace = true, features = ["derive"] }
const_format.workspace = true
env_logger.workspace = true
lazy_static.workspace = true
log.workspace = true
prost = { workspace = true, optional = true }
protobuf = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "sync", "signal"]}
tonic = { workspace = true, optional = true }
ttrpc = { workspace = true, features = ["async"], optional = true }

[build-dependencies]
tonic-build = { workspace = true, optional = true }
ttrpc-codegen = { workspace = true, optional = true }

[features]
default = ["all_attesters", "ttrpc", "kbs"]
grpc = ["tonic", "prost", "tonic-build"]
ttrpc = ["dep:ttrpc", "ttrpc-codegen", "protobuf"]

# supported attestation service (token issuer)
kbs = ["attestation_agent/kbs"]

# attester suites
all_attesters = ["attestation_agent/all-attesters"]
tdx = ["attestation_agent/tdx-attester"]
sgx = ["attestation_agent/sgx-attester"]
az_snp_vtpm = ["attestation_agent/az-snp-vtpm-attester"]
az_tdx_vtpm = ["attestation_agent/az-tdx-vtpm-attester"]
snp = ["attestation_agent/snp-attester"]

openssl = ["attestation_agent/openssl"]
rust-crypto = ["attestation_agent/rust-crypto"]
