[package]
name = "attester"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
az-snp-vtpm = { version = "0.5.3", default-features = false, features = ["attester"], optional = true }
az-tdx-vtpm = { version = "0.5.3", default-features = false, features = ["attester"], optional = true }
base64.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
kbs-types.workspace = true
log.workspace = true
occlum_dcap = { git = "https://github.com/occlum/occlum", tag = "v0.29.7", optional = true }
pv = { version = "0.10.0", package = "s390_pv", optional = true }
scroll = { version = "0.12.0", default-features = false, features = ["derive", "std"], optional = true }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sev = { version = "3.1.1", default-features = false, features = [
    "snp",
], optional = true }
sha2.workspace = true
strum.workspace = true
tdx-attest-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", tag = "DCAP_1.20", optional = true }
thiserror.workspace = true
# TODO: change it to "0.1", once released.
csv-rs = { git = "https://github.com/openanolis/csv-rs", rev = "b74aa8c", optional = true }
codicon = { version = "3.0", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
hyper-tls = { version = "0.5", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true
rstest.workspace = true

[[bin]]
name = "evidence_getter"
required-features = ["bin"]

[features]
default = ["all-attesters"]
all-attesters = [
    "tdx-attester",
    "sgx-attester",
    "az-snp-vtpm-attester",
    "az-tdx-vtpm-attester",
    "snp-attester",
    "csv-attester",
    "cca-attester",
    "se-attester",
]

# tsm-report enables a module that helps attesters to use Linux TSM_REPORTS for generating
# quotes. It's an unconditional dependency for tdx-attester since that is the only way to
# generate TDX quotes with upstream kernels.
tsm-report = ["tempfile"]
tdx-attester = ["scroll", "tsm-report", "tdx-attest-rs"]
sgx-attester = ["occlum_dcap"]
az-snp-vtpm-attester = ["az-snp-vtpm"]
az-tdx-vtpm-attester = ["az-tdx-vtpm"]
snp-attester = ["sev"]
csv-attester = ["csv-rs", "codicon", "hyper", "hyper-tls", "tokio"]
cca-attester = ["tsm-report"]
se-attester  = ["pv"]

bin = ["tokio/rt", "tokio/macros", "clap"]
