[package]
name = "attester"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
az-snp-vtpm = { version = "0.7.1", default-features = false, features = [
    "attester",
], optional = true }
az-tdx-vtpm = { version = "0.7.0", default-features = false, features = [
    "attester",
], optional = true }
base64.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
cfg-if.workspace = true
crypto.path = "../deps/crypto"
hex.workspace = true
iocuddle = { version = "0.1.1", optional = true }
kbs-types = { "git" = "https://github.com/virtee/kbs-types.git", rev = "f4055a1" }
log.workspace = true
occlum_dcap = { git = "https://github.com/occlum/occlum", tag = "v0.29.7", optional = true }
pv = { version = "0.10.0", package = "s390_pv", optional = true }
scroll = { version = "0.12.0", default-features = false, features = [
    "derive",
    "std",
], optional = true }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sev = { version = "6.2.1", default-features = false, features = [
    "snp",
], optional = true }
sha2.workspace = true
strum.workspace = true
tdx-attest-rs = { git = "https://github.com/intel/SGXDataCenterAttestationPrimitives", tag = "DCAP_1.23", optional = true }
thiserror.workspace = true
# TODO: change it to "0.1", once released.
csv-rs = { git = "https://github.com/panpingsheng/csv-rs.git", rev = "7538198", optional = true }
codicon = { version = "3.0", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
hyper-tls = { version = "0.5", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tempfile = { workspace = true, optional = true }
tss-esapi = { version = "7.5" }
openssl.workspace = true
rsa = { version = "0.9.6", features = ["pkcs5", "sha2"]}
num-traits = { version = "0.2" }
env_logger = "0.11"

[dev-dependencies]
tokio.workspace = true
rstest.workspace = true

[[bin]]
name = "evidence_getter"
required-features = ["bin"]

[features]
default = ["all-attesters"]
all-attesters = [
    "tdx-attester",
    "sgx-attester",
    "az-snp-vtpm-attester",
    "az-tdx-vtpm-attester",
    "snp-attester",
    "csv-attester",
    "hygon-dcu-attester",
    "cca-attester",
    "se-attester",
    "tpm-attester",
]

# tsm-report enables a module that helps attesters to use Linux TSM_REPORTS for generating
# quotes. It's an unconditional dependency for tdx-attester since that is the preferred way to
# generate TDX quotes with upstream kernels.
tsm-report = ["tempfile"]
tdx-attester = ["scroll", "tsm-report", "iocuddle"]
tdx-attest-dcap-ioctls = ["tdx-attest-rs"]
sgx-attester = ["occlum_dcap"]
az-snp-vtpm-attester = ["az-snp-vtpm"]
az-tdx-vtpm-attester = ["az-snp-vtpm-attester", "az-tdx-vtpm"]
snp-attester = ["sev"]
csv-attester = ["hygon", "codicon", "hyper", "hyper-tls", "tokio"]
hygon-dcu-attester = ["hygon"]
hygon = ["csv-rs"]
cca-attester = ["tsm-report"]
se-attester  = ["pv"]
tpm-attester = []


bin = ["tokio/rt", "tokio/macros", "clap"]
