[package]
name = "attester"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
az-snp-vtpm = { version = "0.8.1", default-features = false, features = [
    "attester",
], optional = true }
az-tdx-vtpm = { version = "0.8.1", default-features = false, features = [
    "attester",
], optional = true }
base64.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
cfg-if.workspace = true
crypto.path = "../deps/crypto"
hex.workspace = true
iocuddle = { version = "0.1.1", optional = true }
kbs-types.workspace = true
log.workspace = true
nvml-wrapper = { git = "https://github.com/rust-nvml/nvml-wrapper", rev="7e0752f331" , optional = true, default-features = false, features = ["serde"]}
occlum_dcap = { git = "https://github.com/occlum/occlum", tag = "v0.29.7", optional = true }
pem-rfc7468 = { version = "1", optional = true, features = ["alloc"] }
pv = { version = "0.10.0", package = "s390_pv", optional = true }
scroll = { version = "0.13.0", default-features = false, features = [
    "derive",
    "std",
], optional = true }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sev = { version = "6.3.1", default-features = false, features = [
    "snp",
], optional = true }
sha2.workspace = true
strum.workspace = true
tdx-attest-rs = { git = "https://github.com/intel/confidential-computing.tee.dcap", tag = "DCAP_1.24", optional = true }
thiserror.workspace = true
# TODO: change it to "0.1", once released.
csv-rs = { git = "https://github.com/openanolis/csv-rs.git", rev = "2243c67", optional = true }
codicon = { version = "3.0", optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
hyper-tls = { version = "0.5", optional = true }
tokio = { workspace = true, features = ["rt", "macros", "fs", "io-util"] }
tempfile = { workspace = true, optional = true }
env_logger = "0.11"
num-traits = { version = "0.2" }
picky-asn1 = { version = "0.10.1", optional = true }
picky-asn1-der = { version = "0.5.4", optional = true }
picky-asn1-x509 = { version = "0.15.2", optional = true }
tss-esapi = { version = "7.5", optional = true }


[dev-dependencies]
tokio.workspace = true
rstest.workspace = true

[[bin]]
name = "evidence_getter"
required-features = ["bin"]

[features]
default = ["all-attesters"]
all-attesters = [
    "tdx-attester",
    "az-snp-vtpm-attester",
    "az-tdx-vtpm-attester",
    "snp-attester",
    "csv-attester",
    "hygon-dcu-attester",
    "cca-attester",
    "se-attester",
    "tpm-attester",
    "nvidia-attester",
]

# tsm-report enables a module that helps attesters to use Linux TSM_REPORTS for generating
# quotes. It's an unconditional dependency for tdx-attester since that is the preferred way to
# generate TDX quotes with upstream kernels.
tsm-report = ["tempfile"]
tdx-attester = ["scroll", "tsm-report", "iocuddle"]
tdx-attest-dcap-ioctls = ["tdx-attest-rs"]
sgx-attester = ["occlum_dcap"]
nvidia-attester = ["nvml-wrapper"]
az-snp-vtpm-attester = ["az-snp-vtpm", "pem-rfc7468"]
az-tdx-vtpm-attester = ["az-snp-vtpm-attester", "az-tdx-vtpm"]
snp-attester = ["sev"]
csv-attester = ["hygon", "codicon", "hyper", "hyper-tls"]
hygon-dcu-attester = ["hygon"]
hygon = ["csv-rs"]
cca-attester = ["tsm-report"]
se-attester = ["pv"]
tpm-attester = ["tss-esapi", "picky-asn1", "picky-asn1-x509", "picky-asn1-der"]


bin = ["clap"]
