[package]
name = "coco_keyprovider"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
aes-gcm = "0.10.1"
anyhow.workspace = true
base64.workspace = true
clap = { version = "4.0.29", features = ["derive"] }
ctr = "0.9.2"
env_logger = "0.9.0"
futures = "0.3.5"
jwt-simple = "0.11.4"
log.workspace = true
prost.workspace = true
rand = "0.8.4"
reqwest = "0.11.14"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
tonic = "0.5"
uuid = { version = "1.3.0", features = ["fast-rng", "v4"] }

[build-dependencies]
shadow-rs = "0.5.25"
tonic-build = "0.5"

[dev-dependencies]
rstest = "0.17.0"

[features]
