[package]
name = "coco_keyprovider"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
aes-gcm.workspace = true
anyhow.workspace = true
base64.workspace = true
clap = { workspace = true, features = ["derive"] }
ctr.workspace = true
daemonize = "0.5.0"
env_logger.workspace = true
futures = "0.3.31"
jwt-simple.workspace = true
log.workspace = true
prost.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio = { workspace = true, features = ["fs", "rt-multi-thread"] }
tonic.workspace = true
uuid = { workspace = true, features = ["fast-rng", "v4"] }

[build-dependencies]
shadow-rs = "0.36.0"
tonic-build.workspace = true

[dev-dependencies]
rstest.workspace = true

[features]
