[package]
name = "kbc"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bincode = { workspace = true, optional = true }
crypto = { path = "../deps/crypto", default-features = false }
kbs_protocol = { path = "../kbs_protocol", default-features = false, optional = true }
log.workspace = true
prost = { workspace = true, optional = true }
resource_uri.workspace = true
serde.workspace = true
serde_json.workspace = true
sev = { path = "../deps/sev", optional = true }
strum.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"], optional = true }
tonic = { workspace = true, optional = true }
url.workspace = true
uuid = { workspace = true, features = ["serde", "v4"], optional = true }
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
rstest.workspace = true

[build-dependencies]
tonic-build = { workspace = true, optional = true }

[features]
default = ["sample_kbc", "rust-crypto"]

cc_kbc = ["kbs_protocol/background_check"]
all-attesters = ["kbs_protocol?/all-attesters"]
tdx-attester = ["kbs_protocol/tdx-attester"]
tdx-attester-libtdx = ["kbs_protocol/tdx-attester-libtdx"]
sgx-attester = ["kbs_protocol/sgx-attester"]
az-snp-vtpm-attester= ["kbs_protocol/az-snp-vtpm-attester"]
az-tdx-vtpm-attester= ["kbs_protocol/az-tdx-vtpm-attester"]
snp-attester = ["kbs_protocol/snp-attester"]
cca-attester = ["kbs_protocol/cca-attester"]
se-attester  = ["kbs_protocol/se-attester"]
tpm-attester  = ["kbs_protocol/tpm-attester"]

sample_kbc = []
offline_fs_kbc = []
offline_sev_kbc = []
online_sev_kbc = ["tonic", "sev", "prost", "uuid", "bincode", "tokio"]
gen-proto = ["tonic-build"]

# Either `rust-crypto` or `openssl` should be enabled to work as underlying crypto module
rust-crypto = ["crypto/rust-crypto", "kbs_protocol?/rust-crypto"]
openssl = ["crypto/openssl", "kbs_protocol?/openssl"]
