[package]
name = "kbs_protocol"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
attester = { path = "../attester", default-features = false }
base64.workspace = true
crypto = { path = "../deps/crypto", default-features = false }
jwt-simple.workspace = true
kbs-types.workspace = true
log.workspace = true
reqwest = { workspace = true, features = ["cookies", "json"], optional = true }
resource_uri.path = "../deps/resource_uri"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
url.workspace = true
zeroize.workspace = true

[dev-dependencies]
rstest.workspace = true
serial_test.workspace = true
tempfile.workspace = true
testcontainers.workspace = true
tokio = { workspace = true, features = [ "rt", "macros", "fs", "process" ]}

[features]
default = ["background_check", "passport", "rust-crypto", "all-attesters"]

passport = []

background_check = []
all-attesters = ["attester/all-attesters"]
tdx-attester = ["attester/tdx-attester"]
sgx-attester = ["attester/sgx-attester"]
az-snp-vtpm-attester = ["attester/az-snp-vtpm-attester"]
snp-attester = ["attester/snp-attester"]

rust-crypto = ["reqwest/rustls-tls", "crypto/rust-crypto"]
openssl = ["reqwest/native-tls-vendored", "crypto/openssl"]
