[package]
name = "attestation_agent"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
attester = { path = "../attester", default-features = false }
kbs_protocol = { path = "../../confidential-data-hub/kbs_protocol", default-features = false, optional = true }
log.workspace = true
resource_uri.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
token = { path = "../token" }
tokio = { workspace = true, features = ["fs"] }
toml.workspace = true
tonic = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["kbs", "rust-crypto"]

kbs = ["token/kbs", "kbs_protocol"]

all-attesters = ["kbs_protocol?/all-attesters", "attester/all-attesters"]
tdx-attester = ["kbs_protocol?/tdx-attester", "attester/tdx-attester"]
sgx-attester = ["kbs_protocol?/sgx-attester", "attester/sgx-attester"]
az-snp-vtpm-attester = ["kbs_protocol?/az-snp-vtpm-attester", "attester/az-snp-vtpm-attester"]
az-tdx-vtpm-attester = ["kbs_protocol?/az-tdx-vtpm-attester", "attester/az-tdx-vtpm-attester"]
snp-attester = ["kbs_protocol?/snp-attester", "attester/snp-attester"]

# Either `rust-crypto` or `openssl` should be enabled to work as underlying crypto module
rust-crypto = ["kbs_protocol?/rust-crypto"]
openssl = ["kbs_protocol?/openssl"]
