[package]
name = "attestation_agent"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
attester = { path = "../attester", default-features = false }
kbc = { path = "../kbc", default-features = false }
kbs_protocol = { path = "../kbs_protocol", default-features = false, optional = true }
log.workspace = true
resource_uri.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
token = { path = "../token", optional = true }
tokio = { workspace = true, features = ["fs"] }
toml.workspace = true
tonic = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["sample_kbc", "rust-crypto", "coco_as"]

kbs_as = ["token/kbs"]

coco_as = ["token/coco_as"]

cc_kbc = ["kbc/cc_kbc", "kbs_as", "coco_as"]
all-attesters = ["kbc/all-attesters", "kbs_protocol?/all-attesters", "attester/all-attesters", "token?/all-attesters"]
tdx-attester = ["kbc/tdx-attester", "kbs_protocol/tdx-attester", "attester/tdx-attester", "token?/tdx"]
sgx-attester = ["kbc/sgx-attester", "kbs_protocol/sgx-attester", "attester/sgx-attester", "token?/sgx"]
az-snp-vtpm-attester = ["kbc/az-snp-vtpm-attester", "kbs_protocol/az-snp-vtpm-attester", "attester/az-snp-vtpm-attester", "token?/az-snp-vtpm"]
az-tdx-vtpm-attester = ["kbc/az-tdx-vtpm-attester", "kbs_protocol/az-tdx-vtpm-attester", "attester/az-tdx-vtpm-attester", "token?/az-tdx-vtpm"]
snp-attester = ["kbc/snp-attester", "kbs_protocol/snp-attester", "attester/snp-attester", "token?/snp"]

sample_kbc = ["kbc/sample_kbc"]
eaa_kbc = ["kbc/eaa_kbc"]
offline_fs_kbc = ["kbc/offline_fs_kbc"]
offline_sev_kbc = ["kbc/offline_sev_kbc"]
online_sev_kbc = ["kbc/online_sev_kbc"]

# Either `rust-crypto` or `openssl` should be enabled to work as underlying crypto module
rust-crypto = ["kbc/rust-crypto", "kbs_protocol?/rust-crypto"]
openssl = ["kbc/openssl", "kbs_protocol?/openssl"]
