[package]
name = "attestation_agent"
version = "0.1.0"
authors = ["The Attestation Agent Authors"]
publish = false
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
attester = { path = "../attester", default-features = false }
base64.workspace = true
kbs_protocol = { path = "../kbs_protocol", default-features = false, optional = true }
log.workspace = true
reqwest = { workspace = true, features = ["json"], optional = true }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
toml.workspace = true
tonic = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[features]
default = ["rust-crypto"]

# Attestation Token support
token = []

# KBS Token
kbs = ["kbs_protocol/background_check", "token"]

# CoCoAS Attestation Token
coco_as = ["reqwest", "token"]

cc_kbc = ["kbs_protocol/background_check", "kbs", "coco_as"]
all-attesters = ["kbs_protocol?/all-attesters", "attester/all-attesters"]
tdx-attester = ["kbs_protocol/tdx-attester", "attester/tdx-attester"]
sgx-attester = ["kbs_protocol/sgx-attester", "attester/sgx-attester"]
az-snp-vtpm-attester = ["kbs_protocol/az-snp-vtpm-attester", "attester/az-snp-vtpm-attester"]
az-tdx-vtpm-attester = ["kbs_protocol/az-tdx-vtpm-attester", "attester/az-tdx-vtpm-attester"]
snp-attester = ["kbs_protocol/snp-attester", "attester/snp-attester"]

# Either `rust-crypto` or `openssl` should be enabled to work as underlying crypto module
rust-crypto = ["kbs_protocol?/rust-crypto"]
openssl = ["kbs_protocol?/openssl"]
