[package]
name = "test-binaries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "occlum-attester"
required-features = ["occlum"]

[dependencies]
anyhow = "1.0"
attester = { path = "../attester", default-features = false, optional = true }
crypto = { path = "../deps/crypto" }

[features]
occlum = ["attester/sgx-attester"]
